# courswork_1

./: .env  .env.example  README.md  pyproject.toml  requirements.txt
settings/: user_settings.json
src/: config.py  finance_api_utils.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_config.py  test_finance_api_utils.py  test_reports.py  test_services.py  test_utils.py  test_views.py
